--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.911.0",
+    "@aws-sdk/client-dynamodb": "^3.922.0",
     "@aws-sdk/client-s3": "^3.916.0",
+    "@aws-sdk/lib-dynamodb": "^3.922.0",
     "@aws-sdk/s3-request-presigner": "^3.916.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -50,6 +51,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/aws-lambda": "^8.10.157",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
