--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,5 +38,9 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.1",
 		"vite": "^7.1.10"
+	},
+	"dependencies": {
+		"chart.js": "^4.5.1",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
