--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -3,7 +3,9 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"plugins": [
+		"prettier-plugin-svelte"
+	],
 	"overrides": [
 		{
 			"files": "*.svelte",
@@ -11,6 +13,5 @@
 				"parser": "svelte"
 			}
 		}
-	],
-	"tailwindStylesheet": "./src/app.css"
+	]
 }
