--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,8 +19,8 @@
 		"$routes/*": ["src/routes/*"]
 		}
 	},
-	"include": ["src/**/*", "svelte.config.js"]
-	
+	"include": ["src/**/*", "svelte.config.js", "postcss.config.js", "postcss.config.js"]
+
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
